--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "crons": [
-    {
-      "path": "/api/cron/process-queue",
-      "schedule": "* * * * *"
-    }
-  ]
+  "outputDirectory": ".next"
 }
